@@ -540,3 +540,137 @@ foo:
 	vftci	%v15,%v17,4093,12,11
 	vftcidb	%v15,%v17,4093
 	wftcidb	%v15,%v17,4093
+	cdpt	%f3,4000(251,%r6),12
+	cxpt	%f1,4000(251,%r6),12
+	cpdt	%f3,4000(251,%r6),12
+	cpxt	%f1,4000(251,%r6),12
+	locfhr	%r6,%r9,13
+	locfhro	%r6,%r9
+	locfhrh	%r6,%r9
+	locfhrp	%r6,%r9
+	locfhrnle	%r6,%r9
+	locfhrl	%r6,%r9
+	locfhrm	%r6,%r9
+	locfhrnhe	%r6,%r9
+	locfhrlh	%r6,%r9
+	locfhrne	%r6,%r9
+	locfhrnz	%r6,%r9
+	locfhre	%r6,%r9
+	locfhrz	%r6,%r9
+	locfhrnlh	%r6,%r9
+	locfhrhe	%r6,%r9
+	locfhrnl	%r6,%r9
+	locfhrnm	%r6,%r9
+	locfhrle	%r6,%r9
+	locfhrnh	%r6,%r9
+	locfhrnp	%r6,%r9
+	locfhrno	%r6,%r9
+	locfh	%r6,-10000(%r9),13
+	locfho	%r6,-10000(%r9)
+	locfhh	%r6,-10000(%r9)
+	locfhp	%r6,-10000(%r9)
+	locfhnle	%r6,-10000(%r9)
+	locfhl	%r6,-10000(%r9)
+	locfhm	%r6,-10000(%r9)
+	locfhnhe	%r6,-10000(%r9)
+	locfhlh	%r6,-10000(%r9)
+	locfhne	%r6,-10000(%r9)
+	locfhnz	%r6,-10000(%r9)
+	locfhe	%r6,-10000(%r9)
+	locfhz	%r6,-10000(%r9)
+	locfhnlh	%r6,-10000(%r9)
+	locfhhe	%r6,-10000(%r9)
+	locfhnl	%r6,-10000(%r9)
+	locfhnm	%r6,-10000(%r9)
+	locfhle	%r6,-10000(%r9)
+	locfhnh	%r6,-10000(%r9)
+	locfhnp	%r6,-10000(%r9)
+	locfhno	%r6,-10000(%r9)
+	lochi	%r6,-32765,12
+	lochio	%r6,-32765
+	lochih	%r6,-32765
+	lochip	%r6,-32765
+	lochinle	%r6,-32765
+	lochil	%r6,-32765
+	lochim	%r6,-32765
+	lochinhe	%r6,-32765
+	lochilh	%r6,-32765
+	lochine	%r6,-32765
+	lochinz	%r6,-32765
+	lochie	%r6,-32765
+	lochiz	%r6,-32765
+	lochinlh	%r6,-32765
+	lochihe	%r6,-32765
+	lochinl	%r6,-32765
+	lochinm	%r6,-32765
+	lochile	%r6,-32765
+	lochinh	%r6,-32765
+	lochinp	%r6,-32765
+	lochino	%r6,-32765
+	locghi	%r6,-32765,12
+	locghio	%r6,-32765
+	locghih	%r6,-32765
+	locghip	%r6,-32765
+	locghinle	%r6,-32765
+	locghil	%r6,-32765
+	locghim	%r6,-32765
+	locghinhe	%r6,-32765
+	locghilh	%r6,-32765
+	locghine	%r6,-32765
+	locghinz	%r6,-32765
+	locghie	%r6,-32765
+	locghiz	%r6,-32765
+	locghinlh	%r6,-32765
+	locghihe	%r6,-32765
+	locghinl	%r6,-32765
+	locghinm	%r6,-32765
+	locghile	%r6,-32765
+	locghinh	%r6,-32765
+	locghinp	%r6,-32765
+	locghino	%r6,-32765
+	lochhi	%r6,-32765,12
+	lochhio	%r6,-32765
+	lochhih	%r6,-32765
+	lochhip	%r6,-32765
+	lochhinle	%r6,-32765
+	lochhil	%r6,-32765
+	lochhim	%r6,-32765
+	lochhinhe	%r6,-32765
+	lochhilh	%r6,-32765
+	lochhine	%r6,-32765
+	lochhinz	%r6,-32765
+	lochhie	%r6,-32765
+	lochhiz	%r6,-32765
+	lochhinlh	%r6,-32765
+	lochhihe	%r6,-32765
+	lochhinl	%r6,-32765
+	lochhinm	%r6,-32765
+	lochhile	%r6,-32765
+	lochhinh	%r6,-32765
+	lochhinp	%r6,-32765
+	lochhino	%r6,-32765
+	stocfh	%r6,-10000(%r9),13
+	stocfho	%r6,-10000(%r9)
+	stocfhh	%r6,-10000(%r9)
+	stocfhp	%r6,-10000(%r9)
+	stocfhnle	%r6,-10000(%r9)
+	stocfhl	%r6,-10000(%r9)
+	stocfhm	%r6,-10000(%r9)
+	stocfhnhe	%r6,-10000(%r9)
+	stocfhlh	%r6,-10000(%r9)
+	stocfhne	%r6,-10000(%r9)
+	stocfhnz	%r6,-10000(%r9)
+	stocfhe	%r6,-10000(%r9)
+	stocfhz	%r6,-10000(%r9)
+	stocfhnlh	%r6,-10000(%r9)
+	stocfhhe	%r6,-10000(%r9)
+	stocfhnl	%r6,-10000(%r9)
+	stocfhnm	%r6,-10000(%r9)
+	stocfhle	%r6,-10000(%r9)
+	stocfhnh	%r6,-10000(%r9)
+	stocfhnp	%r6,-10000(%r9)
+	stocfhno	%r6,-10000(%r9)
+	llzrgf	%r6,-10000(%r9,%r11)
+	lzrf	%r6,-10000(%r9,%r11)
+	lzrg	%r6,-10000(%r9,%r11)
+	ppno	%r6,%r9
