@@ -1,3 +1,8 @@
+2015-03-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* s390-opc.c: Add new IBM z13 instructions.
+	* s390-opc.txt: Likewise.
+
 2015-03-10  Renlin Li  <renlin.li@arm.com>
 
 	* aarch64-tbl.h (aarch64_opcode_table): Remove strub, ldurb, ldursb,
