@@ -1,3 +1,8 @@
+2015-03-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gas/s390/zarch-z13.d: Add more z13 instructions.
+	* gas/s390/zarch-z13.s: Likewise.
+
 2015-03-05  Renlin Li  <renlin.li@arm.com>
 
 	* gas/arm/dis-data.d: Adjust the desired output.
